--- a/DetectionManagement.plist
+++ b/DetectionManagement.plist
@@ -17,7 +17,7 @@
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>com.tydic.DetectionManagement</string>
+				<string>com.tydic.ProjectManagement</string>
 				<key>bundle-version</key>
 				<string>1.0</string>
 				<key>kind</key>
